--- a/geoCode_Front/package.json
+++ b/geoCode_Front/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "axios": "^0.21.1",
     "leaflet": "^1.7.1",
-    "sirv-cli": "^1.0.0"
+    "sirv-cli": "^1.0.0",
+    "svelte-routing": "^1.5.0"
   }
 }
